--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
+    "flatto": "^0.0.1",
     "hono": "^3.11.11",
-    "itarr": "^0.1.3"
+    "ukv": "^0.4.0"
   }
 }
